# PulseDock

./: .gitignore  README.md  RELEASING.md  package-lock.json  package.json  plan.md  tsconfig.backend.json  tsconfig.base.json  tsconfig.electron.json  tsconfig.json  tsconfig.sidecar.json  ui-design-brief.md  vite.config.ts  vite.preload.config.ts
.tmp-asar/: package.json
app/: index.html
app/electron/main/: ipc.ts  main.ts  smoke-test.ts  tray-icon.ts  window.ts
app/electron/preload/: index.ts
app/src/: App.tsx  env.d.ts  main.tsx
app/src/application/: provider-collector-contract.ts  provider-collector-worker.ts  provider-collector.ts  provider-orchestrator.ts
app/src/components/: DateFilterDropdown.tsx  DateFilterPills.tsx  EmptyStatePanel.tsx  ErrorStatePanel.tsx  FooterMeta.tsx  LoadingCard.tsx  MeterBar.tsx  MetricCell.tsx  UsageBar.tsx  (+10 more)
release-notes/: v0.1.1.md
scripts/: rust-runner.mjs  tauri-runner.mjs
sidecar/: build.mjs  collector.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: external_url.rs  lib.rs  main.rs  models.rs  orchestrator.rs  provider_codex.rs  provider_cursor.rs  provider_shared.rs  usage_range.rs
src-tauri/windows/: installer.nsi
test/: codex-local-range.test.mjs  cursor-cache-behavior.test.mjs  cursor-token-breakdown.test.mjs  packaged-app-smoke.packaged.mjs  provider-orchestrator.test.mjs  provider-quota-mapping.test.mjs  quota-format.test.mjs  sandboxed-preload-runner.mjs  sandboxed-preload-smoke.test.mjs  security-hardening.test.mjs  usage-range-window.test.mjs
(+23 files in other folders)
