[package]
name = "pulsedock"
version = "0.1.3"
edition = "2024"

[lib]
name = "pulsedock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.5"
tokio = { version = "1.48.0", features = ["sync"] }
url = "2.5.7"
